# libfunnel

./: .clang-format  Doxyfile  README.md  meson.build  test-egl.c  test-vk.c
demo/: test-egl.c
docs/: buffer_sync.md  index.md
include/: funnel-egl.h  funnel-gbm.h  funnel-vk.h  funnel.h
src/: egl.c  funnel.c  funnel_internal.h  vulkan.c
